# HACKBYTE

./: .dockerignore  README.md  docker-compose.yml
backend/: Dockerfile  emit_test.py  main.py  pyproject.toml  requirements.txt
backend/ai_engine/: .env  graph.py  install_railway.sh  main.py  package.json  railway.json  requirements.txt
backend/ai_engine/models/: __init__.py  events.py  incident.py  intent.py  patch.py
backend/ai_engine/models/utils/: __init__.py  validators.py
backend/ai_engine/nodes/: __init__.py  code_fix.py  collect.py  diagnose.py  enforce.py  execute.py  plan.py  reflect.py  triage.py  verify.py
backend/ai_engine/nodes/utils/: __init__.py  routing.py  state_helpers.py
backend/ai_engine/policies/: fleet.json  policies.json  project_tree_cache.json  service_dependencies.json
backend/ai_engine/tools/: __init__.py  armor_tools.py  code_tools.py  dispatch.py  fleet.py  gemini_tools.py  log_tools.py  prompts.py  railway_tools.py  spacetime_tools.py  ssh_utils.py  vm_tools.py
backend/ai_engine/utils/: __init__.py  cache.py  colors.py  cost_tracker.py  dependency_graph.py  formatters.py  grounding.py  logger.py  project_tree.py  response_validator.py  telemetry.py
backend/core/: requirements.txt
backend/core/AllLogs/: apps.py
backend/core/UserProjects/: apps.py  models.py  serializers.py  var.py  views.py
backend/core/UserProjects/migrations/: 0001_initial.py  0002_rename_log_source_path_project_sshkey_and_more.py  (+4 more)
backend/core/authenticationApp/: models.py
backend/core/core/: settings.py  urls.py
blockchain/: Dockerfile  (+6 more)
(+59 files in other folders)
