[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cryptography>=46.0.6",
    "dj-rest-auth>=7.2.0",
    "django>=6.0.3",
    "django-allauth>=65.15.0",
    "django-redis>=6.0.0",
    "djangorestframework-simplejwt>=5.5.1",
    "elevenlabs>=2.41.0",
    "google-generativeai>=0.8.6",
    "httpx>=0.28.1",
    "langchain-core>=1.2.26",
    "langgraph>=1.1.6",
    "paramiko>=4.0.0",
    "psycopg2-binary>=2.9.11",
    "pyjwt>=2.12.1",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
]
